# docs/swagger.json
@@ -67,6 +67,12 @@
                         "in": "query"
                     },
                     {
+                        "type": "boolean",
+                        "description": "Get pastes, which current user can update",
+                        "name": "onlyUsers",
+                        "in": "query"
+                    },
+                    {
                         "type": "string",
                         "description": "Sort order, e.g., -created_at",
                         "name": "sort",
@@ -446,7 +452,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/v1.AuthInput"
+                            "$ref": "#/definitions/service.AuthInput"
                         }
                     }
                 ],
@@ -454,7 +460,7 @@
                     "201": {
                         "description": "Successfully created",
                         "schema": {
-                            "$ref": "#/definitions/v1.AuthResp"
+                            "$ref": "#/definitions/service.AuthResp"
                         }
                     },
                     "400": {
@@ -511,7 +517,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/v1.ResetPasswordInput"
+                            "$ref": "#/definitions/service.ResetPasswordInput"
                         }
                     }
                 ],
@@ -519,7 +525,7 @@
                     "202": {
                         "description": "Successfully accepted",
                         "schema": {
-                            "$ref": "#/definitions/v1.ResetPasswordResp"
+                            "$ref": "#/definitions/service.ResetPasswordResp"
                         }
                     },
                     "400": {
@@ -569,7 +575,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/v1.RegistrationInput"
+                            "$ref": "#/definitions/service.RegistrationInput"
                         }
                     }
                 ],
@@ -577,7 +583,7 @@
                     "202": {
                         "description": "Successfully accepted",
                         "schema": {
-                            "$ref": "#/definitions/v1.UserResp"
+                            "$ref": "#/definitions/service.UserResp"
                         }
                     },
                     "400": {
@@ -627,7 +633,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/v1.ActivateUserInput"
+                            "$ref": "#/definitions/service.ActivateUserInput"
                         }
                     }
                 ],
@@ -635,7 +641,7 @@
                     "202": {
                         "description": "Successfully accepted",
                         "schema": {
-                            "$ref": "#/definitions/v1.UserResp"
+                            "$ref": "#/definitions/service.UserResp"
                         }
                     },
                     "400": {
@@ -685,7 +691,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/v1.UpdatePasswordInput"
+                            "$ref": "#/definitions/service.UpdatePasswordInput"
                         }
                     }
                 ],
@@ -693,7 +699,7 @@
                     "200": {
                         "description": "Successfully reset",
                         "schema": {
-                            "$ref": "#/definitions/v1.UpdatePasswordResponse"
+                            "$ref": "#/definitions/service.UpdatePasswordResponse"
                         }
                     },
                     "400": {
@@ -816,6 +822,33 @@
                 }
             }
         },
+        "service.ActivateUserInput": {
+            "type": "object",
+            "properties": {
+                "token": {
+                    "type": "string"
+                }
+            }
+        },
+        "service.AuthInput": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "service.AuthResp": {
+            "type": "object",
+            "properties": {
+                "authentication_token": {
+                    "$ref": "#/definitions/models.Token"
+                }
+            }
+        },
         "service.CreatePasteInput": {
             "type": "object",
             "properties": {
@@ -863,6 +896,55 @@
                 }
             }
         },
+        "service.RegistrationInput": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "login": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "service.ResetPasswordInput": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                }
+            }
+        },
+        "service.ResetPasswordResp": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "service.UpdatePasswordInput": {
+            "type": "object",
+            "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "token": {
+                    "type": "string"
+                }
+            }
+        },
+        "service.UpdatePasswordResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
         "service.UpdatePasteInput": {
             "type": "object",
             "properties": {
@@ -880,30 +962,11 @@
                 }
             }
         },
-        "v1.ActivateUserInput": {
+        "service.UserResp": {
             "type": "object",
             "properties": {
-                "token": {
-                    "type": "string"
-                }
-            }
-        },
-        "v1.AuthInput": {
-            "type": "object",
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                }
-            }
-        },
-        "v1.AuthResp": {
-            "type": "object",
-            "properties": {
-                "authentication_token": {
-                    "$ref": "#/definitions/models.Token"
+                "user": {
+                    "$ref": "#/definitions/models.User"
                 }
             }
         },
@@ -931,63 +994,6 @@
                             "type": "string"
                         }
                     }
-                }
-            }
-        },
-        "v1.RegistrationInput": {
-            "type": "object",
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "login": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                }
-            }
-        },
-        "v1.ResetPasswordInput": {
-            "type": "object",
-            "properties": {
-                "email": {
-                    "type": "string"
-                }
-            }
-        },
-        "v1.ResetPasswordResp": {
-            "type": "object",
-            "properties": {
-                "message": {
-                    "type": "string"
-                }
-            }
-        },
-        "v1.UpdatePasswordInput": {
-            "type": "object",
-            "properties": {
-                "password": {
-                    "type": "string"
-                },
-                "token": {
-                    "type": "string"
-                }
-            }
-        },
-        "v1.UpdatePasswordResponse": {
-            "type": "object",
-            "properties": {
-                "message": {
-                    "type": "string"
-                }
-            }
-        },
-        "v1.UserResp": {
-            "type": "object",
-            "properties": {
-                "user": {
-                    "$ref": "#/definitions/models.User"
                 }
             }
         }
